# uart-inter-board-embassy-rs

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
