[package]
name = "uart-inter-board"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [
    "stm32f103c6",
    "time-driver-any",
    "memory-x",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "platform-cortex-m",
    "executor-thread",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
opt-level = "s"
debug = 2
lto = true
codegen-units = 1
